# wechat-yoga-miniprogram

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  init.sql  init_old.sql  project.config.json  project.private.config.json
WebAssembly/admin/src/: lib.rs
WebAssembly/weixin/src/: lib.rs
admin-web/: package-lock.json  package.json  react-router.config.ts  vite.config.ts
admin-web/app/: root.tsx  routes.ts
admin-web/app/components/: AdminLayout.tsx
admin-web/app/routes/: login.tsx  not-found.tsx
admin-web/app/routes/admin/: actions.tsx  admin-users.tsx  dashboard.tsx  lessions.tsx  lessons-list.tsx  locations.tsx  notices.tsx  posters.tsx  teachers.tsx  users.tsx
admin-web/app/utils/: auth.ts  lesson.ts  mock-auth.ts
admin-web/types/: +routes.ts
miniprogram/: app.js  project.config.json  project.private.config.json
miniprogram/pages/booking/: booking.js
miniprogram/pages/index/: index.js  index.json  index.wxml
miniprogram/utils/: shared.js
server/: Cargo.toml  config.yml
server/src/: main.rs
server/src/handlers/: action_button.rs  admin_actions.rs  admin_auth.rs  admin_book.rs  admin_lessons.rs  admin_notices.rs  admin_posters.rs  admin_teachers.rs  admin_user.rs  admin_users.rs  auth.rs  booking.rs  debug.rs  index.rs  index_old.rs  location.rs  membership.rs  mod.rs  models.rs  schedule.rs  teacher.rs  upload.rs  user.rs
server/src/models/: action_button.rs  admin_lesson.rs  admin_user.rs  booking.rs  debug.rs  index.rs  lession.rs  location.rs  membership.rs  mod.rs  settings.rs  teacher.rs  user.rs
(+13 files in other folders)
