[package]
edition = "2021"
name = "YogaServer"
version = "0.1.0"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
tokio = "1.28.0"

tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
deadpool-postgres = { version = "0.10.5", features = ["rt_tokio_1"] }
serde = "1.0.160"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

image = {version="0.24.6"}
imageproc = "0.23.0"
rusttype = "0.9.3"

chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.2"
dotenv = "0.15.0"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "rust_decimal"] }
rust_decimal = { version = "1.35", features = ["serde"] }
